force-app/main/default/objects/Lead_Staging_Record__c/Lead_Staging_Record__c.object-meta.xml
<CustomObject>
    <label>Lead Staging</label>
    <nameField>
        <displayFormat>LSR-{000000}</displayFormat>
        <label>Lead Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>