force-app/main/default/objects/Lead_Staging_Record__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Lead_Staging_Records</relationshipName>
    <type>Lookup</type>
</CustomField>