force-app/main/default/objects/Lead_Staging_Record__c/fields/Associated_Records__c.field-meta.xml
<CustomField>
    <fullName>Associated_Records__c</fullName>
    <label>Associated Records</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event Registration</fullName>
            </value>
            <value>
                <fullName>Form Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>