force-app/main/default/objects/Lead_Staging_Record__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Lead Stagings</relationshipLabel>
    <relationshipName>Lead_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>