force-app/main/default/objects/Lead_Staging_Record__c/fields/Error_Count__c.field-meta.xml
<CustomField>
    <fullName>Error_Count__c</fullName>
    <label>Error Count</label>
    <summaryForeignKey>Lead_Staging_Error_Log__c.Lead_Staging_Record__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>