force-app/main/default/objects/Lead_Staging_Record__c/fields/Error_Reason__c.field-meta.xml
<CustomField>
    <fullName>Error_Reason__c</fullName>
    <label>Error Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Basic Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>