force-app/main/default/objects/Lead_Staging_Record__c/fields/From_Auto_Launched_Lead_Staging_Flow__c.field-meta.xml
<CustomField>
    <fullName>From_Auto_Launched_Lead_Staging_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is set when a Lead Staging Record is created inside the flow &quot;Action Flow: Create Lead Staging Record&quot; and works as an anti-filter in the flow &quot;Record-Triggered: Created Lead Staging Record Triggers Action Flow&quot;</inlineHelpText>
    <label>From Auto-Launched Lead Staging Flow</label>
    <type>Checkbox</type>
</CustomField>