force-app/main/default/objects/Lead_Staging_Record__c/fields/Interaction__c.field-meta.xml
<CustomField>
    <fullName>Interaction__c</fullName>
    <label>Interaction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Interaction</valueSetName>
    </valueSet>
</CustomField>