force-app/main/default/objects/Lead_Staging_Record__c/fields/Number_of_Records_Merged__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Records_Merged__c</fullName>
    <label>Number of Records Merged</label>
    <summarizedField>Lead_Staging_Merge_Log__c.Number_of_Records_Merged__c</summarizedField>
    <summaryForeignKey>Lead_Staging_Merge_Log__c.Lead_Staging__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>