force-app/main/default/objects/Lead_Staging_Record__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created Lead</fullName>
            </value>
            <value>
                <fullName>Updated Lead</fullName>
            </value>
            <value>
                <fullName>Reopened Lead</fullName>
            </value>
            <value>
                <fullName>Updated Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>