force-app/main/default/objects/Lead_Staging_Record__c/fields/Phone_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Phone_Formatted__c</fullName>
    <formula>IF(
    BEGINS(SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;), &apos;+45&apos;),
    SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;),
    IF(
        BEGINS(SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;), &apos;45&apos;),
        &apos;+&apos; + SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;),
        IF(
            AND(
                NOT(BEGINS(SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;), &apos;+45&apos;)),
                ISPICKVAL(Country__c, &apos;Denmark&apos;)
            ),
            &apos;+45&apos; + SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;),
            IF(
                BEGINS(SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;), &apos;+46&apos;),
                SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;),
                IF(
                    BEGINS(SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;), &apos;46&apos;),
                    &apos;+&apos; + SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;),
                    IF(
                        AND(
                            NOT(BEGINS(SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;), &apos;+46&apos;)),
                            ISPICKVAL(Country__c, &apos;Sweden&apos;)
                        ),
                        &apos;+46&apos; + SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;),
                        SUBSTITUTE(Phone__c , &quot; &quot;, &quot;&quot;)
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone (Formatted)</label>
    <type>Text</type>
</CustomField>