force-app/main/default/objects/Lead_Staging_Record__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <label>Processing Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Processing_Status</valueSetName>
    </valueSet>
</CustomField>