force-app/main/default/objects/Lead_Staging_Record__c/fields/Skip_Campaign_Member_Creation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Campaign_Member_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Campaign Member Creation</label>
    <type>Checkbox</type>
</CustomField>