force-app/main/default/objects/Lead_Staging_Record__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>User Created</fullName>
            </value>
            <value>
                <fullName>Airtable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>