force-app/main/default/objects/Lead_Staging_Record__c/listViews/DFJ_Leads_Lead_Staging_Record.listView-meta.xml
<ListView>
    <fullName>DFJ_Leads_Lead_Staging_Record</fullName>
    <filterScope>Queue</filterScope>
    <label>DFJ Leads</label>
    <queue>DFJ_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>