force-app/main/default/objects/Lead_Staging_Record__c/listViews/Ireland_Leads_Lead_Staging_Record.listView-meta.xml
<ListView>
    <fullName>Ireland_Leads_Lead_Staging_Record</fullName>
    <filterScope>Queue</filterScope>
    <label>Ireland Leads</label>
    <queue>Ireland_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>