force-app/main/default/objects/Lead_Staging_Record__c/listViews/Sweden_Leads_Lead_Staging_Record.listView-meta.xml
<ListView>
    <fullName>Sweden_Leads_Lead_Staging_Record</fullName>
    <filterScope>Queue</filterScope>
    <label>Sweden Leads</label>
    <queue>Sweden_Leads</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>